--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
-    "name": "V2Ray VLess",
+    "name": "fg1",
     "description": "Deploy V2ray VLess on Heroku.",
     "keywords": ["VLESS"],
     "env": {
         "ID": {
             "description": "VLESS ID",
-            "value": "1309c705-61ff-47d3-bab9-67a377e403db"
+            "value": "1458f6d8-ae84-4c4e-970e-307579cac372"
         }
     },
-    "repository": "https://github.com/DanyTPG/heroku-vless",
+    "repository": "https://github.com/gedds/fdgr4674",
     "stack": "container"
 }
